[workspace]
members = ["codegen", "octocrate", "core"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["wokeyifrontend@gmail.com"]
license = "MIT"
description = "A comprehensive GitHub REST API library based on Rust."
readme = "./README.md"
homepage = "https://github.com/panghu-huang/octocrate"
repository = "https://github.com/panghu-huang/octocrate"
keywords = ["github", "api", "octocrate", "github-api", "rest-api"]
include = ["**/*.rs", "Cargo.toml"]
categories = ["web-programming::http-client", "api-bindings"]

[workspace.dependencies]
regex = "1.10.4"
reqwest = { version = "0.12.2" }
serde = { version = "1.0.197" }
serde_json = "1.0.115"
tokio = { version = "1.32.0" }
derive_builder = "0.20.0"
thiserror = "1.0.44"
chrono = "0.4.37"
jsonwebtoken = "8.2.0"
dotenv = "0.15.0"
handlebars = "5.1.2"
indicatif = "0.17.8"
