[package]
name = "octocrate-core"
version = "0.1.5"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true

[features]
full = ["pagination"]
apps = []
pagination = ["dep:url"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde_json = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
chrono = { workspace = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
