[package]
name = "octocrate-core"
version = "0.1.7"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true


[features]
full = ["octocrate-types/full"]
apps = ["octocrate-types/apps"]
pagination = ["octocrate-types/pagination"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
multipart = ["reqwest/multipart"]
file-body = ["reqwest/stream", "tokio-util/codec", "tokio/fs"]

[dependencies]
serde_json = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "charset",
  "http2",
  "macos-system-configuration",
] }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
octocrate-types = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
