[package]
name = "octocrate"
version = "2.2.0"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true

[features]
default = ["octocrate-core/default-tls"]
full = ["octocrate-types/full", "pagination", "chrono"]
apps = ["octocrate-types/apps", "chrono"]
actions = ["octocrate-types/actions"]
activity = ["octocrate-types/activity"]
billing = ["octocrate-types/billing"]
checks = ["octocrate-types/checks"]
code_scanning = ["octocrate-types/code_scanning"]
codes_of_conduct = ["octocrate-types/codes_of_conduct"]
emojis = ["octocrate-types/emojis"]
dependabot = ["octocrate-types/dependabot"]
dependency_graph = ["octocrate-types/dependency_graph"]
gists = ["octocrate-types/gists"]
git = ["octocrate-types/git"]
gitignore = ["octocrate-types/gitignore"]
issues = ["octocrate-types/issues"]
licenses = ["octocrate-types/licenses"]
markdown = ["octocrate-types/markdown"]
merge_queue = ["octocrate-types/merge_queue"]
meta = ["octocrate-types/meta"]
migrations = ["octocrate-types/migrations"]
oidc = ["octocrate-types/oidc"]
orgs = ["octocrate-types/orgs"]
packages = ["octocrate-types/packages"]
projects = ["octocrate-types/projects"]
pulls = ["octocrate-types/pulls"]
rate_limit = ["octocrate-types/rate_limit"]
reactions = ["octocrate-types/reactions"]
repos = ["octocrate-types/repos"]
search = ["octocrate-types/search"]
secret_scanning = ["octocrate-types/secret_scanning"]
teams = ["octocrate-types/teams"]
users = ["octocrate-types/users"]
codespaces = ["octocrate-types/codespaces"]
copilot = ["octocrate-types/copilot"]
security_advisories = ["octocrate-types/security_advisories"]
interactions = ["octocrate-types/interactions"]
classroom = ["octocrate-types/classroom"]
desktop = ["octocrate-types/desktop"]
webhooks = ["octocrate-types/webhooks"]
pagination = ["octocrate-types/pagination", "octocrate-core/pagination"]
rustls-tls = ["octocrate-core/rustls-tls"]
multipart = ["octocrate-core/multipart"]
file-body = ["octocrate-core/file-body"]

[lib]
doctest = false

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
octocrate-core = { workspace = true }
octocrate-types = { workspace = true }
typed-builder = { workspace = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
dotenv = { workspace = true }

[[test]]
name = "commits"
path = "tests/commits.rs"
required-features = ["repos"]

[[test]]
name = "repos"
path = "tests/repos.rs"
required-features = ["repos"]

[[test]]
name = "releases"
path = "tests/releases.rs"
required-features = ["repos", "file-body"]

[[test]]
name = "users"
path = "tests/users.rs"
required-features = ["users"]

[[test]]
name = "pulls"
path = "tests/pulls.rs"
required-features = ["pulls"]

[[test]]
name = "apps"
path = "tests/apps.rs"
required-features = ["apps", "repos"]

[[test]]
name = "issues"
path = "tests/issues.rs"
required-features = ["issues"]

[[test]]
name = "search"
path = "tests/search.rs"
required-features = ["search"]

[[test]]
name = "pagination"
path = "tests/pagination.rs"
required-features = ["pagination", "repos"]
