[package]
name = "octocrate-types"
version = "0.1.1"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true

[lib]
doctest = false

[features]
# API features
full = ["pagination"]
apps = []
actions = []
activity = []
billing = []
checks = []
code_scanning = []
codes_of_conduct = []
emojis = []
dependabot = []
dependency_graph = []
gists = []
git = []
gitignore = []
issues = []
licenses = []
markdown = []
merge_queue = []
meta = []
migrations = []
oidc = []
orgs = []
packages = []
projects = []
pulls = []
rate_limit = []
reactions = []
repos = []
search = []
secret_scanning = []
teams = []
users = []
codespaces = []
copilot = []
security_advisories = []
interactions = []
classroom = []
desktop = []
webhooks = []
pagination = ["dep:url"]
# Webhooks features
webhook_branch_protection_configuration = []
webhook_branch_protection_rule = []
webhook_check_run = []
webhook_check_suite = []
webhook_code_scanning_alert = []
webhook_commit_comment = []
webhook_create = []
webhook_custom_property = []
webhook_custom_property_values = []
webhook_delete = []
webhook_dependabot_alert = []
webhook_deploy_key = []
webhook_deployment = []
webhook_deployment_protection_rule = []
webhook_deployment_review = []
webhook_deployment_status = []
webhook_discussion = []
webhook_discussion_comment = []
webhook_fork = []
webhook_github_app_authorization = []
webhook_gollum = []
webhook_installation = []
webhook_installation_repositories = []
webhook_installation_target = []
webhook_issue_comment = []
webhook_issues = []
webhook_label = []
webhook_marketplace_purchase = []
webhook_member = []
webhook_membership = []
webhook_merge_group = []
webhook_meta = []
webhook_milestone = []
webhook_org_block = []
webhook_organization = []
webhook_package = []
webhook_page_build = []
webhook_personal_access_token_request = []
webhook_ping = []
webhook_project_card = []
webhook_project = []
webhook_project_column = []
webhook_projects_v2 = []
webhook_projects_v2_item = []
webhook_public = []
webhook_pull_request = []
webhook_pull_request_review_comment = []
webhook_pull_request_review = []
webhook_pull_request_review_thread = []
webhook_push = []
webhook_registry_package = []
webhook_release = []
webhook_repository_advisory = []
webhook_repository = []
webhook_repository_dispatch = []
webhook_repository_import = []
webhook_repository_ruleset = []
webhook_repository_vulnerability_alert = []
webhook_secret_scanning_alert = []
webhook_secret_scanning_alert_location = []
webhook_security_advisory = []
webhook_security_and_analysis = []
webhook_sponsorship = []
webhook_star = []
webhook_status = []
webhook_team_add = []
webhook_team = []
webhook_watch = []
webhook_workflow_dispatch = []
webhook_workflow_job = []
webhook_workflow_run = []

[dependencies]
serde_json = { workspace = true }
url = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
typed-builder = { workspace = true }
