[package]
name = "octocrate-webhooks"
version = "1.0.0"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true

[lib]
doctest = false

[features]
webhook_event = []
branch_protection_configuration = []
branch_protection_rule = []
check_run = []
check_suite = []
code_scanning_alert = []
commit_comment = []
create = []
custom_property = []
custom_property_values = []
delete = []
dependabot_alert = []
deploy_key = []
deployment = []
deployment_protection_rule = []
deployment_review = []
deployment_status = []
discussion = []
discussion_comment = []
fork = []
github_app_authorization = []
gollum = []
installation = []
installation_repositories = []
installation_target = []
issue_comment = []
issues = []
label = []
marketplace_purchase = []
member = []
membership = []
merge_group = []
meta = []
milestone = []
org_block = []
organization = []
package = []
page_build = []
personal_access_token_request = []
ping = []
project_card = []
project = []
project_column = []
projects_v2 = []
projects_v2_item = []
public = []
pull_request = []
pull_request_review_comment = []
pull_request_review = []
pull_request_review_thread = []
push = []
registry_package = []
release = []
repository_advisory = []
repository = []
repository_dispatch = []
repository_import = []
repository_ruleset = []
repository_vulnerability_alert = []
secret_scanning_alert = []
secret_scanning_alert_location = []
security_advisory = []
security_and_analysis = []
sponsorship = []
star = []
status = []
team_add = []
team = []
watch = []
workflow_dispatch = []
workflow_job = []
workflow_run = []

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
typed-builder = { workspace = true }
