[package]
name = "github-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
api-builder = { path = "../api-builder" }
infrastructure = { path = "../infrastructure" }
actix-web = "4.2.1"