[package]
name = "octocrate-api-builder"
version = "0.1.0"
edition = "2021"
description = "Github API builder for octocrate"
authors = ["wokeyifrontend@gmail"]
license = "MIT"
repository = "https://github.com/panghu-huang/octocrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "full"] }
