[package]
name = "octocrate-infra"
version = "0.1.1"
edition = "2021"
description = "Infrastructure for octocrate"
authors = ["wokeyifrontend@gmail"]
license = "MIT"
repository = "https://github.com/panghu-huang/octocrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
