[package]
name = "octocrate"
version = "0.1.0"
edition = "2021"
authors = ["wokeyifrontend@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A library of github API"
readme = "README.md"
homepage = "https://github.com/panghu-huang/github-api"
repository = "https://github.com/panghu-huang/github-api"
keywords = ["github"]
include = ["**/*.rs", "Cargo.toml"]

[features]
default = []
webhook-server = ["actix-web"]

[[example]]
name = "auto-reply"
path = "examples/auto-reply.rs"
required-features = ["webhook-server"]

[[example]]
name = "events"
path = "examples/events.rs"
required-features = ["webhook-server"]

[[example]]
name = "shutdown-server"
path = "examples/shutdown-server.rs"
required-features = ["webhook-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "rt-multi-thread",
  "signal",
] }
octocrate-api-builder = { path = "../octocrate-api-builder" }
octocrate-infra = { path = "../octocrate-infra" }
actix-web = { version = "4.2.1", optional = true }
